--- a/src/styles/components/bucket.scss
+++ b/src/styles/components/bucket.scss
@@ -1,4 +1,4 @@
-@import 'mixins';
+@import 'mixins/responsive';
 @import '../../node_modules/pattern-library/core/pattern-library/headers';
 
 .quote-bucket .image {
