--- a/src/app/components/calculator/calculator.scss
+++ b/src/app/components/calculator/calculator.scss
@@ -100,7 +100,7 @@ $narrow-tablet: 700px;
             border: 0;
             color: inherit;
             font-family: inherit;
-            font-size: 9rem;
+            font-size: 560%;
             font-weight: inherit;
             outline: none;
             padding: 0;
