--- a/src/app/components/form-input/form-input.scss
+++ b/src/app/components/form-input/form-input.scss
@@ -1,5 +1,4 @@
-@import 'variables';
-// @import 'mixins';
+@import '../../node_modules/pattern-library/core/pattern-library/headers';
 
 .form-input {
     .suggestions {
@@ -11,7 +10,7 @@
 
     .suggestion-box {
         background-color: color(neutral-lightest);
-        box-shadow: 0 0.1rem 0.3rem 0.2rem rgba(color(gray), 0.1);
+        box-shadow: 0 0.1rem 0.3rem 0.2rem rgba(os-color(gray), 0.1);
         max-height: 50vh;
         overflow: auto;
     }
@@ -20,7 +19,7 @@
         padding: 0 1rem;
 
         &.active {
-            background-color: lighten(color(neutral-lighter), 8%);
+            background-color: ui-color(page-bg);
         }
     }
 }
