--- a/src/app/components/get-this-title/get-this-title.scss
+++ b/src/app/components/get-this-title/get-this-title.scss
@@ -1,7 +1,5 @@
-@import 'mixins';
+@import 'mixins/triangle';
 @import '../../node_modules/pattern-library/core/pattern-library/headers';
-
-
 
 .get-this-title {
     .remover {
