--- a/src/app/pages/about/about.scss
+++ b/src/app/pages/about/about.scss
@@ -33,7 +33,6 @@ $hero-break-width: 880px;
 
 
 .about-page {
-    background-color: rgba(color(neutral-lighter), 0.2);
 
     .hero {
         align-items: center;
@@ -68,7 +67,7 @@ $hero-break-width: 880px;
             display: flex;
             flex-flow: column wrap;
             margin: 0 auto;
-            max-width: $boxed-width;
+            max-width: $content-max;
             width: 100%;
             z-index: 1;
 
@@ -80,13 +79,13 @@ $hero-break-width: 880px;
         }
 
         .overlay {
-            background-color: rgba(saturate(color(blue), 10%), 0.85);
+            background-color: rgba(saturate(os-color(blue), 10%), 0.85);
             color: text-color(white);
             display: flex;
             justify-content: flex-end;
             padding: 4rem;
 
-            @media screen and (min-width: $boxed-width + 1) {
+            @include wider-than($content-max) {
                 padding-left: calc(-61rem + 55%);
             }
 
